# openai_computer_use_rust

./: .env.example  Cargo.toml  README.md
src/: agent.rs  api.rs  cli.rs  computer.rs  error.rs  main.rs  mock.rs
src/thread_computer/: computer.rs  mod.rs
